# steganography

./: .env  docker-compose.yml
src/backend/: .dockerignore  .env  Cargo.toml  docker-compose.yml  output.mkv  test_apis.sh
src/backend/.sqlx/: query-098b1a45dde35f79e5c08937dce44cab295d1ccc4d9b08b5d4be0cdc4539801d.json  query-1610650b968e50c5461a9db87f8d98dabaeb790231ecc52bfd0bba36f1f7f071.json  query-9ae099f11ea5e6af8849c72f466fa27b6b9f6fdf9a5a67268d5bbee72022d07d.json  query-9c06fbc39be7e1694a382f678113e464262600e5a7317adf32331a2a6fa461de.json  query-b209faab861e0727fba5caaeb07aa098b9d04105a5e878f8268f818e5e823f20.json  query-c7eba9dbe86a4a898caebdd061c27f4ee186cf45201a083777f4e4800b6bfc79.json  query-daaff9aa4cd6e8d85541e4a15c2710d7ca69eef2483c9eeff9ee49fd4de0d27f.json  query-dd39d30f6879fab32db4cabba02797a94bd99d1c863d01cb42f2f58c8d2282ac.json
src/backend/api_gateway/: Dockerfile  docker-compose.yml
src/backend/auth_service/: .env  Cargo.toml  Dockerfile  docker-compose.yml  todo.txt
src/backend/auth_service/.sqlx/: query-18ddb497385c2041589da1376a43f1a43e5659f27508c0038b03e1b3e183e2c0.json  query-1b5737347e9d82ef2a32d3b56b47fc97ca3bf65cff0b5025468511b6336eb97a.json  query-1bb969eb0208f6eecc4194e0ffa4a7101922277d85f89e069cf152785b9f5871.json  query-2029a2bb53e5393cd522d0806fa5c3542cccc94dadfa16511f0a69591c7b236c.json  query-29316f9019053146a057e1b3720abfcd02334b99200aa0ec8ab0c3de626f6bb4.json  query-2c0e2035f0181c0b0291d2982acadbe94b06a0553735e85e0893a4e4148272db.json  query-38d10a0d94ccdd766e39da891db79c1f57c99c96f7caee3263ab5a66190df18f.json  query-5004c2d541bbb4f794c13b0b78e64d68e29ce6e06cbc2439b9598474e6d82649.json  query-51bfbf499d66a55527731492290ce8bcef6479de286189205b00527b12ba8809.json  query-53f303d172a219beb15a2c7c2fa8e43c2313d05e16ac66f9e16005a9f4c243a5.json  query-806252ef04aeef558ca7736805ef2f7a7d1c216a1a4e5d457018887c4b6d3d36.json  query-93e9630e689ed23281b7db0996719495027174ba32ac7333ddf8745d23295b56.json  query-b8f0e3e17421a6a4748f5a8217ec336cc3c44e5ddb8dafedbb4dbfde353a3e94.json  query-cb803da08be4cc6c6998117c7c50f9751db38cd5f3691731414c1db69b93bb3e.json  query-cebb1bca8ab91f745d5863f0899b563510da63d040c076ff043092053d3ab51a.json
src/backend/auth_service/migrations/: 20251024170101_create_users_table.sql  20251101121015_create_refresh_tokens_table.sql  20251108165834_create_user_roles_table.sql  20251110235159_create_roles_table.sql  20251116180000_remove_revoked_at.sql
src/backend/auth_service/secrets/: jwt_private_key.pem
src/backend/auth_service/src/: app_state.rs  dtos.rs  main.rs
src/backend/auth_service/src/auth/: jwt.rs  middleware.rs
src/backend/auth_service/src/db/: connections.rs
src/backend/auth_service/src/entities/: token.rs
src/backend/auth_service/src/errors/: mod.rs  user_service_error.rs
src/backend/auth_service/src/models/: token.rs  tokens.rs
src/backend/auth_service/src/repositories/: refresh_token_repository.rs  token_repository.rs  user_repository.rs
src/backend/auth_service/src/routes/: account.rs  auth.rs  mod.rs  public_key.rs  tokens.rs
src/backend/auth_service/src/services/: token_service.rs  user_service.rs
src/backend/migrations/: 20251024170101_create_users_table.sql  20251101121015_create_refresh_tokens_table.sql
src/backend/shared/: Cargo.toml
src/backend/shared/auth_user/: Cargo.toml
src/backend/shared/auth_user/src/: dtos.rs  lib.rs
src/backend/shared/global/: Cargo.toml
src/backend/shared/global/src/: dtos.rs  errors.rs  extractors.rs  lib.rs  (+1 more)
src/backend/shared/secrets/: jwt_public_key.pem
src/backend/shared/src/: dtos.rs  lib.rs
src/backend/src/: app_state.rs  embed_image.rs  embed_video.rs  extract_image.rs  extract_video.rs  main.rs
src/backend/src/auth/: jwt.rs  middleware.rs
src/backend/src/db/: connections.rs
src/backend/src/dtos/: user_dto.rs
src/backend/src/errors/: error_body.rs  mod.rs  user_service_error.rs
src/backend/src/models/: user.rs
src/backend/src/repositories/: user_repository.rs
src/backend/src/routes/: auth.rs
src/backend/src/services/: user_service.rs
src/backend/src/steganography/: embed_image.rs  embed_video.rs  extract_image.rs  extract_video.rs  mod.rs
src/backend/steganography_service/: .env  Cargo.toml  Dockerfile  docker-compose.yml
src/backend/steganography_service/src/: app_state.rs  main.rs
src/backend/user_service/: .env  Cargo.toml  Dockerfile  docker-compose.yml
src/backend/user_service/.sqlx/: query-23b957391ca45eaa0701ebb34ab850659ec447b725de5787bfd6c046527e2fa4.json  query-9ca3343c35e098b96d32aebd99b807222f020d5c2e474ac35e0b061b2204897e.json
src/backend/user_service/migrations/: 20251110235151_create_users_table.sql
src/backend/user_service/src/: app_state.rs  dtos.rs  main.rs
(+53 files in other folders)
