[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
dotenvy = "0.15"
argon2 = "0.5"
jsonwebtoken = "9.3"
rand = "0.9.2"
sha2 = "0.10"
