[package]
name = "shared_global"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"
axum = "0.7"
async-trait = "0.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
validator = { version = "0.19", features = ["derive"] }
